--- a/strand/iOS/Strand/Strand/DFPersonSelectionTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFPersonSelectionTableViewCell.xib
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -27,45 +29,36 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tRa-tw-Znj">
-                        <rect key="frame" x="283" y="16" width="21" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Fri-fN-swI"/>
-                            <constraint firstAttribute="width" constant="21" id="wq4-RZ-hyc"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="950" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0w-a5-an4">
                         <rect key="frame" x="59" y="28" width="50" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yAu-Lz-d0S">
+                        <rect key="frame" x="276" y="18" width="36" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="W0w-a5-an4" secondAttribute="leading" id="7pU-NX-58P"/>
-                    <constraint firstAttribute="trailing" secondItem="tRa-tw-Znj" secondAttribute="trailing" constant="16" id="BIA-d9-paM"/>
+                    <constraint firstItem="yAu-Lz-d0S" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="9Ny-Uf-Wy0"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="ZAQ-Nx-9It" secondAttribute="trailing" constant="8" id="BNR-7d-KGa"/>
                     <constraint firstAttribute="centerY" secondItem="nn3-YE-wjl" secondAttribute="centerY" priority="900" id="BcU-16-kmA"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="900" constant="16" id="DfA-Jh-fVt"/>
                     <constraint firstAttribute="centerY" secondItem="ZAQ-Nx-9It" secondAttribute="centerY" id="Jcr-lD-eGi"/>
-                    <constraint firstAttribute="bottom" secondItem="W0w-a5-an4" secondAttribute="bottom" constant="4" id="MX0-7l-qE7"/>
+                    <constraint firstAttribute="centerY" secondItem="yAu-Lz-d0S" secondAttribute="centerY" id="WxO-zX-q15"/>
                     <constraint firstAttribute="centerY" secondItem="W0w-a5-an4" secondAttribute="centerY" constant="-10" id="b83-Kj-uSd"/>
-                    <constraint firstItem="W0w-a5-an4" firstAttribute="leading" secondItem="ZAQ-Nx-9It" secondAttribute="trailing" constant="8" id="kcV-Dh-bTO"/>
                     <constraint firstItem="W0w-a5-an4" firstAttribute="top" secondItem="nn3-YE-wjl" secondAttribute="bottom" id="pfN-NF-6dL"/>
-                    <constraint firstAttribute="centerY" secondItem="tRa-tw-Znj" secondAttribute="centerY" id="uEt-Lf-xBn"/>
                     <constraint firstItem="ZAQ-Nx-9It" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="zw2-g5-xF9"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="MX0-7l-qE7"/>
-                        <exclude reference="kcV-Dh-bTO"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="checkedImageView" destination="tRa-tw-Znj" id="2SF-GP-WEI"/>
                 <outlet property="nameLabel" destination="nn3-YE-wjl" id="6Oh-8j-K4V"/>
                 <outlet property="profilePhotoStackView" destination="ZAQ-Nx-9It" id="Jeu-5B-Jvj"/>
+                <outlet property="rightLabel" destination="yAu-Lz-d0S" id="6Xo-KZ-3rY"/>
                 <outlet property="subtitleLabel" destination="W0w-a5-an4" id="rwy-0b-eOP"/>
             </connections>
             <point key="canvasLocation" x="337" y="374"/>
