--- a/strand/iOS/Strand/Strand/DFPersonSelectionTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFPersonSelectionTableViewCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -44,14 +43,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="W0w-a5-an4" secondAttribute="leading" id="7pU-NX-58P"/>
-                    <constraint firstItem="yAu-Lz-d0S" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="9Ny-Uf-Wy0"/>
+                    <constraint firstAttribute="centerY" secondItem="yAu-Lz-d0S" secondAttribute="centerY" id="Afh-VL-pne"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="ZAQ-Nx-9It" secondAttribute="trailing" constant="8" id="BNR-7d-KGa"/>
                     <constraint firstAttribute="centerY" secondItem="nn3-YE-wjl" secondAttribute="centerY" priority="900" id="BcU-16-kmA"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="900" constant="16" id="DfA-Jh-fVt"/>
                     <constraint firstAttribute="centerY" secondItem="ZAQ-Nx-9It" secondAttribute="centerY" id="Jcr-lD-eGi"/>
-                    <constraint firstAttribute="centerY" secondItem="yAu-Lz-d0S" secondAttribute="centerY" id="WxO-zX-q15"/>
                     <constraint firstAttribute="centerY" secondItem="W0w-a5-an4" secondAttribute="centerY" constant="-10" id="b83-Kj-uSd"/>
                     <constraint firstItem="W0w-a5-an4" firstAttribute="top" secondItem="nn3-YE-wjl" secondAttribute="bottom" id="pfN-NF-6dL"/>
+                    <constraint firstAttribute="trailing" secondItem="yAu-Lz-d0S" secondAttribute="trailing" constant="8" id="r4f-OJ-QdU"/>
                     <constraint firstItem="ZAQ-Nx-9It" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="zw2-g5-xF9"/>
                 </constraints>
             </tableViewCellContentView>
