--- a/strand/iOS/Strand/Strand/DFNoTableItemsView.xib
+++ b/strand/iOS/Strand/Strand/DFNoTableItemsView.xib
@@ -12,7 +12,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WH2-z2-97B">
-                    <rect key="frame" x="282" y="36" width="36" height="23"/>
+                    <rect key="frame" x="8" y="36" width="584" height="23"/>
                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -27,16 +27,18 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="5o1-IU-s0a" secondAttribute="trailing" constant="20" id="2a0-FJ-odJ"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5o1-IU-s0a" secondAttribute="bottom" constant="20" id="3a2-bq-Tvb"/>
                 <constraint firstItem="5o1-IU-s0a" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="3yn-Bu-uaa"/>
                 <constraint firstAttribute="bottom" secondItem="5o1-IU-s0a" secondAttribute="bottom" id="Jdh-wW-Td4"/>
                 <constraint firstAttribute="centerX" secondItem="lU9-hh-vj8" secondAttribute="centerX" id="LDN-cS-Ar2"/>
+                <constraint firstItem="WH2-z2-97B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Ra3-Eh-JGq"/>
                 <constraint firstItem="WH2-z2-97B" firstAttribute="top" secondItem="lU9-hh-vj8" secondAttribute="bottom" constant="8" id="XFP-RL-Fa7"/>
                 <constraint firstAttribute="centerX" secondItem="WH2-z2-97B" secondAttribute="centerX" id="XXH-7L-Yu1"/>
                 <constraint firstAttribute="centerX" secondItem="5o1-IU-s0a" secondAttribute="centerX" id="bjg-7R-AL8"/>
+                <constraint firstAttribute="trailing" secondItem="WH2-z2-97B" secondAttribute="trailing" constant="8" id="eDW-3B-v9d"/>
                 <constraint firstItem="lU9-hh-vj8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="h5U-Is-Vga"/>
                 <constraint firstItem="5o1-IU-s0a" firstAttribute="top" secondItem="WH2-z2-97B" secondAttribute="bottom" constant="8" id="tCb-RQ-f1r"/>
             </constraints>
