--- a/strand/iOS/Strand/Strand/DFOutgoingCardContentView.xib
+++ b/strand/iOS/Strand/Strand/DFOutgoingCardContentView.xib
@@ -48,7 +48,7 @@
                         <constraint firstAttribute="height" constant="30" id="VnS-ip-Azx"/>
                     </constraints>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                 </textField>
             </subviews>
