--- a/strand/iOS/Strand/Strand/DFPhotoDetailViewController.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoDetailViewController.xib
@@ -46,7 +46,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BV6-BM-Whi">
-                    <rect key="frame" x="108" y="18" width="16" height="22"/>
+                    <rect key="frame" x="108" y="20" width="16" height="22"/>
                     <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -70,7 +70,7 @@
                 <constraint firstAttribute="trailing" secondItem="opa-QM-Zd8" secondAttribute="trailing" id="Cht-pI-f4J"/>
                 <constraint firstItem="gGV-RF-dqd" firstAttribute="bottom" secondItem="opa-QM-Zd8" secondAttribute="bottom" id="DZq-ro-Yjo"/>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="top" secondItem="mpa-i4-xv8" secondAttribute="top" constant="8" id="Ed5-1o-YVi"/>
-                <constraint firstItem="ibH-dU-jON" firstAttribute="top" secondItem="BV6-BM-Whi" secondAttribute="top" id="KZ2-ND-fAY"/>
+                <constraint firstItem="ibH-dU-jON" firstAttribute="top" secondItem="BV6-BM-Whi" secondAttribute="top" constant="-2" id="KZ2-ND-fAY"/>
                 <constraint firstAttribute="bottom" secondItem="opa-QM-Zd8" secondAttribute="bottom" id="PPK-FG-q4r"/>
                 <constraint firstItem="opa-QM-Zd8" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="SPk-Of-ByB"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ibH-dU-jON" secondAttribute="trailing" constant="8" id="VCH-Ty-l1A"/>
